--- a/frontend/src/components/PasswordForm/style.css
+++ b/frontend/src/components/PasswordForm/style.css
@@ -61,14 +61,17 @@
     top: -1px;
     white-space: nowrap;
 }
-
+.forms-primary-select .overlap-group input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px white inset !important;
+    box-shadow: 0 0 0 1000px white inset !important;
+}
 .forms-primary-select .password-input {
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    transform: translateY(-50%);
-    width: 360px; /* 40px is the sum of left and right padding */
-    height: 66px;
+    flex-grow: 1;
+    margin-left: 10px;
+    margin-right: 50px;
+    height: calc(100% - 20px);
+    padding-top: 10px;
+    padding-bottom: 10px;
     border: none;
     outline: none;
     background: transparent;
@@ -76,7 +79,7 @@
 
 
 .forms-primary-select .eye-button {
-    position: relative;
+    /*position: relative;*/
     /*top: 0;*/
     right: 20px;
     height: 66px;
@@ -85,5 +88,18 @@
     /*outline: none;*/
     background: transparent;
     cursor: pointer;
-    margin-left: 395px;
+    margin-left: 50px;
+}
+
+.password-error-message {
+    margin-left: 5px;
+    align-self: flex-start;
+    color: red;
+    font-family: var(--12px-bold-font-family);
+    font-size: var(--12px-bold-font-size);
+    font-style: var(--12px-bold-font-style);
+    font-weight: var(--12px-bold-font-weight);
+    letter-spacing: var(--12px-bold-letter-spacing);
+    line-height: var(--12px-bold-line-height);
+    white-space: nowrap;
 }
