--- a/frontend/src/pages/Login/style.css
+++ b/frontend/src/pages/Login/style.css
@@ -48,6 +48,7 @@
     top: 829px;
 }
 
+/*Don't have account? Register*/
 .screen .you-don-t-have-an-ac {
     color: var(--x-00000-0primary);
     font-family: var(--14px-regular-font-family);
@@ -105,19 +106,22 @@
     left: 401px !important;
 }
 
-/*.screen .forms-primary-select-resting-onlight {*/
-/*    left: 0 !important;*/
-/*    position: absolute !important;*/
-/*    top: 110px !important;*/
-/*    width: 437px !important;*/
-/*}*/
+.screen .forms-primary-select-resting-onlight {
+    left: 0 !important;
+    position: absolute !important;
+    top: 110px !important;
+    width: 437px !important;
+}
 
-/*.screen .buttons-px-label {*/
-/*    left: 0 !important;*/
-/*    position: absolute !important;*/
-/*    top: 278px !important;*/
-/*    width: 437px !important;*/
-/*}*/
+/*ButtonLable*/
+.screen .buttons-px-label {
+    left: 0 !important;
+    position: absolute !important;
+    top: 280px !important;
+    width: 437px !important;
+    background-color: #f9af15 !important;
+
+}
 
 /*.screen .buttons-14px-label-filled-active-onlight {*/
 /*    background-color: #f9af15 !important;*/
@@ -127,8 +131,12 @@
 .screen .buttons-label-instance {
     color: #000000 !important;
     left: 198px !important;
+    top: 1px;
 }
 
+/**/
+
+/*Remember me checkbox*/
 .screen .forms-general-checkbox-resting-onlight {
     left: 0 !important;
     position: absolute !important;
@@ -136,6 +144,7 @@
     width: 309px !important;
 }
 
+/*Forgot the password*/
 .screen .recover-password {
     color: var(--x-00000-0primary);
     font-family: var(--12px-bold-font-family);
